--- a/grpdecompilershellcode.lfm
+++ b/grpdecompilershellcode.lfm
@@ -7,7 +7,7 @@ object Form1: TForm1
   ClientHeight = 178
   ClientWidth = 331
   OnCreate = FormCreate
-  LCLVersion = '2.0.4.0'
+  LCLVersion = '2.0.10.0'
   object LabeledEdit1: TLabeledEdit
     Left = 80
     Height = 23
@@ -69,12 +69,14 @@ object Form1: TForm1
     Panels = <>
   end
   object OpenDialog1: TOpenDialog
-    left = 40
-    top = 112
+    OnCanClose = OpenDialog1CanClose
+    Left = 40
+    Top = 112
   end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
+    OnCanClose = SelectDirectoryDialog1CanClose
     Options = [ofOldStyleDialog, ofEnableSizing, ofViewDetail]
-    left = 256
-    top = 112
+    Left = 256
+    Top = 112
   end
 end
